# Gaias-farm

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.txt  Esame.sln  Esame.vcxproj  Esame.vcxproj.filters  Game.vcxproj  Game.vcxproj.filters  README.md  READMEEEEEE.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  avatar.cpp  avatar.h  cmake_install.cmake  main.c  main.cpp  main2.cpp
Esame.dir/Debug/: Esame.exe.recipe  Esame.ilk
Esame.dir/Debug/Esame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Esame.dir/Release/: Esame.exe.recipe
Esame.dir/Release/Esame.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TEST/: CMakeLists.txt  CmakeLists.txt  TEST.sln  TEST.vcxproj  TEST.vcxproj.filters  TestCMakeLists.txt  avatar.cpp  avatar.h  imp.cpp  main.cpp  pch.h
TEST/tests/: test_movement.cpp
build-c/: ALL_BUILD.vcxproj  CMakeCache.txt  Esame.sln  Esame.vcxproj  Esame.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-c/Esame.dir/Release/: Esame.exe.recipe
build-c/Esame.dir/Release/Esame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-c/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-c/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-c/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-c/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build-test/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Esame.sln  Esame.vcxproj  Esame.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  testM.vcxproj  testM.vcxproj.filters  testM[1]_include.cmake  testM[1]_tests.cmake
build-test/Esame.dir/Debug/: Esame.exe.recipe  Esame.ilk
build-test/Esame.dir/Debug/Esame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-test/lib/Debug/: gtest_main.lib
build-test/testM.dir/Debug/: testM.exe.recipe
build-test/testM.dir/Debug/testM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-test/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build_x64/: ALL_BUILD.vcxproj  CMakeCache.txt  Esame.sln  Esame.vcxproj  Esame.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_x64/Esame.dir/Release/: Esame.exe.recipe
build_x64/Esame.dir/Release/Esame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build_x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
test/: test_main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
